[package]
name = "claudissent"
version = "0.1.0"
edition = "2024"
description = "Orchestrate contrarian Claude Code instances"
license = "MIT"

[dependencies]
claude-code-agent-sdk = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
