[package]
name = "actually"
version = "0.1.3"
edition = "2021"
description = "Actually, this tool forces Claude Code agents into creative thinking by pitting them against each other as contrarian strategists."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mwcz/actually"

[dependencies]
claude-code-agent-sdk = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
ratatui = "0.30"
crossterm = "0.29.0"
arboard = { version = "3", features = ["wayland-data-control"] }
